attemptin to make dem images fluid

--- a/dev/haml/index.haml
+++ b/dev/haml/index.haml
@@ -14,42 +14,42 @@
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_1-header.haml")).render
 
-				%tr#row_feature
+				%tr#row_feature{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_2-feature.haml")).render
 
-				%tr#row_content-1
+				%tr#row_content-1{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_3-content--1.haml")).render
 
-				%tr#row_callout-1
+				%tr#row_callout-1{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_4-callout--1.haml")).render
 
-				%tr#row_image-1
+				%tr#row_image-1{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_5-image--1.haml")).render
 
-				%tr#row_content-2
+				%tr#row_content-2{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_6-content--2.haml")).render
 
-				%tr#row_divider-1
+				%tr#row_divider-1{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_7-divider--1.haml")).render
 
-				%tr#row_content-3
+				%tr#row_content-3{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_8-content--3.haml")).render
 
-				%tr#row_image-2
+				%tr#row_image-2{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_9-image--2.haml")).render
 
-				%tr#row_callout-2
+				%tr#row_callout-2{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_10-callout--2.haml")).render
 
-				%tr#row_footer
+				%tr#row_footer{"mc:hideable" => true}
 					%td{:align => "center", :valign => "top"}
 						= Haml::Engine.new(File.read("dev/haml/partials/_sec_11-footer.haml")).render
