--- a/dev/haml/partials/_sec_10-callout--2.haml
+++ b/dev/haml/partials/_sec_10-callout--2.haml
@@ -6,4 +6,4 @@
 		%td{:align => "center", :valign => "middle", :width => "100%"}
 
 			-# does height attr get updated when image is changed by the client? removed height 192
-			%img{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/e7a06762-3b80-4dfa-9c29-25bdf3a84192.jpg", :width => "600", :alt => "", "mc:edit" => "edit_quote-2"}
+			%img.fluid_600{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/e7a06762-3b80-4dfa-9c29-25bdf3a84192.jpg", :alt => "", "mc:edit" => "edit_quote-2"}
