--- a/dev/haml/partials/_sec_11-footer.haml
+++ b/dev/haml/partials/_sec_11-footer.haml
@@ -31,7 +31,7 @@
 				%tr
 					%td{:align => "center", :valign => "middle"}
 						:plain
-							<div class="paragraphs">Copyright &copy; *|DATE:y|* St. Charles Market, All rights reserved.</div>
+							<div class="paragraphs">Copyright &copy; *|DATE:Y|* St. Charles Market, All rights reserved.</div>
 							<div class="paragraphs">You are receiving this email because you signed up for the St. Charles Market newsletter.</div>
 
 				%tr
