--- a/dev/haml/partials/_sec_2-feature.haml
+++ b/dev/haml/partials/_sec_2-feature.haml
@@ -7,4 +7,4 @@
 		%td{:align => "center", :valign => "middle", :width => "100%"}
 
 			-# does height attr get updated when image is changed by the client? removed height 272
-			%img{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/d228f6de-bd50-4115-a191-a337d2c0cff7.jpg", :width => "600", :alt => "The St. Charles Market Newsletter", "mc:edit" => "edit_feature-image"}
+			%img.fluid_600{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/d228f6de-bd50-4115-a191-a337d2c0cff7.jpg", :alt => "The St. Charles Market Newsletter", "mc:edit" => "edit_feature-image"}
