--- a/dev/haml/partials/_sec_4-callout--1.haml
+++ b/dev/haml/partials/_sec_4-callout--1.haml
@@ -6,4 +6,4 @@
 		%td{:align => "center", :valign => "middle", :width => "100%"}
 
 			-# does height attr get updated when image is changed by the client? removed height 204
-			%img{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/b535f204-bc2c-4f29-bc57-9bee98ce44b7.jpg", :width => "600", :alt => "", "mc:edit" => "edit_quote-1"}
+			%img.fluid_600{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/b535f204-bc2c-4f29-bc57-9bee98ce44b7.jpg", :alt => "", "mc:edit" => "edit_quote-1"}
