--- a/dev/haml/partials/_sec_5-image--1.haml
+++ b/dev/haml/partials/_sec_5-image--1.haml
@@ -6,4 +6,4 @@
 		%td{:align => "center", :valign => "middle", :width => "100%"}
 
 			-# does height attr get updated when image is changed by the client? removed height 300
-			%img{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/f4ff2569-1138-4b80-b0f3-afbb12405063.jpg", :width => "600", :alt => "", "mc:edit" => "edit_image-1"}
+			%img.fluid_600{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/f4ff2569-1138-4b80-b0f3-afbb12405063.jpg", :alt => "", "mc:edit" => "edit_image-1"}
