--- a/dev/haml/partials/_sec_8-content--3.haml
+++ b/dev/haml/partials/_sec_8-content--3.haml
@@ -14,7 +14,7 @@
 						%h1{"mc:edit" => "edit_content-3_title"} Weekend at the Market
 
 						-# does height attr get updated when image is changed by the client?
-						%img.content_image{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/95582730-c08f-45e5-9e4f-60bbeccbe676.jpg", :width => "490", :alt => "", "mc:edit" => "edit_content-3_image"}
+						%img.content_image.fluid_490{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/95582730-c08f-45e5-9e4f-60bbeccbe676.jpg", :alt => "", "mc:edit" => "edit_content-3_image"}
 
 						:plain
 							<div class="paragraphs" mc:edit="edit_content-2_body">ModBox will be developing this property over the course of the next three years. It’s a very exciting opportunity for us to bring new life to this historic and culturally important site. Preliminary design and the City approvals process will begin immediately and the expected completion for this project is 2018.</div>
