--- a/dev/haml/partials/_sec_3-content--1.haml
+++ b/dev/haml/partials/_sec_3-content--1.haml
@@ -14,7 +14,7 @@
 						%h1{"mc:edit" => "edit_content-1_title"} St. Charles Church Development
 
 						-# does height attr get updated when image is changed by the client?
-						%img.content_image{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/98c2a128-050b-4532-958e-b472c7484e4f.jpg", :width => "490", :alt => "", "mc:edit" => "edit_content-1_image"}
+						%img.content_image.fluid_490{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/98c2a128-050b-4532-958e-b472c7484e4f.jpg", :alt => "", "mc:edit" => "edit_content-1_image"}
 
 						:plain
 							<div class="paragraphs" mc:edit="edit_content-1_body">In late December the details were finalized for the purchase of the St. Charles Church in Vanier. ModBox will be developing this property over the course of the next three years. It’s a very exciting opportunity for us to bring new life to this historic and culturally important site. Preliminary design and the City approvals process will begin immediately and the expected completion for this project is 2018.</div>
