--- a/dev/haml/partials/_sec_9-image--2.haml
+++ b/dev/haml/partials/_sec_9-image--2.haml
@@ -6,4 +6,4 @@
 		%td{:align => "center", :valign => "middle", :width => "100%"}
 
 			-# does height attr get updated when image is changed by the client? removed height 300
-			%img{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/ab181adb-5f45-46d9-b0fc-2052da69dc4a.jpg", :width => "600", :alt => "", "mc:edit" => "edit_image-2"}
+			%img.fluid_600{:src => "https://gallery.mailchimp.com/9d04fb276b7023a982943ca3e/images/ab181adb-5f45-46d9-b0fc-2052da69dc4a.jpg", :alt => "", "mc:edit" => "edit_image-2"}
